--- a/.github/workflows/publish-release-image-wrapper.yaml
+++ b/.github/workflows/publish-release-image-wrapper.yaml
@@ -18,7 +18,7 @@ jobs:
       os: ${{ matrix.os }}
       from-precompiled: true
   publish-release-image:
-    needs: build-wheels
+    needs: [ build-wheels, build-artifact ]
     uses: ./.github/workflows/publish-release-image.yaml
     secrets: inherit
     with:
