--- a/.github/workflows/build-artifact.yaml
+++ b/.github/workflows/build-artifact.yaml
@@ -164,7 +164,7 @@ jobs:
               { echo "!!! ALERT !!! This should never happen, but does explain an issue we've been hunting. Please send a link to this job to Metal Infra.  kthxbye."; exit 1; }
 
             nice -n 19 $build_command
-            nice -n 19 python -m build
+            nice -n 19 python3 -m build
             ccache -s > build/ccache.stats
       - name: Upload distribution as artifact
         uses: actions/upload-artifact@v4
