--- a/.github/workflows/publish-release-image.yaml
+++ b/.github/workflows/publish-release-image.yaml
@@ -90,6 +90,7 @@ jobs:
           docker_version: ${{ inputs.version }}
           docker_password: ${{ secrets.GITHUB_TOKEN }}
           run_args: |
+            pip install pytest
             ${{ matrix.test_group.cmd }}
   tag-docker-image-as-latest:
     needs: [smoke-test-docker-image, create-docker-release-image]
