--- a/.github/workflows/publish-release-image.yaml
+++ b/.github/workflows/publish-release-image.yaml
@@ -91,6 +91,7 @@ jobs:
           docker_password: ${{ secrets.GITHUB_TOKEN }}
           run_args: |
             pip install pytest
+            export PATH="$(pwd)/.local/bin:$PATH"
             ${{ matrix.test_group.cmd }}
   tag-docker-image-as-latest:
     needs: [smoke-test-docker-image, create-docker-release-image]
