--- a/.github/workflows/package-and-release.yaml
+++ b/.github/workflows/package-and-release.yaml
@@ -118,21 +118,12 @@ jobs:
         with:
           name: release-notes
           path: RELEASE_NOTES.txt
-  build-wheels:
-    needs: create-tag
-    strategy:
-      matrix:
-        os: [ubuntu-20.04]
-    uses: ./.github/workflows/_build-wheels-impl.yaml
-    with:
-      os: ${{ matrix.os }}
-      from-precompiled: false
   # Candidate for breaking up
   create-and-upload-draft-release:
     needs: [
       create-tag,
       create-release-notes,
-      build-wheels,
+      build-artifact,
     ]
     strategy:
       matrix:
