--- a/.github/workflows/build-docker-artifact.yaml
+++ b/.github/workflows/build-docker-artifact.yaml
@@ -66,9 +66,8 @@ jobs:
         id: tags
         run: |
           BUILD_TAG=$(cat \
-            dockerfile/*.Dockerfile \
-            scripts/docker/install_test_deps.sh \
-            scripts/docker/requirements* \
+            install_dependencies.sh
+            dockerfile/Dockerfile \
             tt_metal/python_env/requirements-dev.txt \
             docs/requirements-docs.txt \
             tests/sweep_framework/requirements-sweeps.txt \
