--- a/.github/actions/generate-docker-tag/action.yml
+++ b/.github/actions/generate-docker-tag/action.yml
@@ -25,9 +25,8 @@ runs:
       shell: bash
       run: |
         BUILD_TAG=$(cat \
-          dockerfile/*.Dockerfile \
-          scripts/docker/install_test_deps.sh \
-          scripts/docker/requirements* \
+          install_dependencies.sh \
+          dockerfile/Dockerfile \
           tt_metal/python_env/requirements-dev.txt \
           docs/requirements-docs.txt \
           tests/sweep_framework/requirements-sweeps.txt \
