--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -8,12 +8,19 @@ set(CMAKE_CXX_CLANG_TIDY "")
 # Boost
 ############################################################################################################################
 
-include(${PROJECT_SOURCE_DIR}/cmake/fetch_boost.cmake)
-
-fetch_boost_library(core)
-fetch_boost_library(smart_ptr)
-fetch_boost_library(container)
-fetch_boost_library(interprocess)
+CPMAddPackage(
+    NAME Boost
+    VERSION 1.86.0
+    URL
+        https://github.com/boostorg/boost/releases/download/boost-1.86.0/boost-1.86.0-cmake.tar.xz
+        URL_HASH
+        SHA256=2c5ec5edcdff47ff55e27ed9560b0a0b94b07bd07ed9928b476150e16b0efc57
+    OPTIONS
+        "BOOST_ENABLE_CMAKE ON"
+        "BOOST_SKIP_INSTALL_RULES ON"
+        "BUILD_SHARED_LIBS OFF"
+        "BOOST_INCLUDE_LIBRARIES core\\\;container\\\;smart_ptr\\\;interprocess"
+)
 
 add_library(span INTERFACE)
 target_link_libraries(span INTERFACE Boost::core)
