#17623: Change the syntax to the correct one `continue-on-error: true`

--- a/.github/workflows/docs-latest-public.yaml
+++ b/.github/workflows/docs-latest-public.yaml
@@ -80,6 +80,6 @@ jobs:
         # https://github.com/tenstorrent/tt-metal/issues/17623
         if: ${{ failure() }}
         uses: geekyeggo/delete-artifact@v5
-        failOnError: false
+        continue-on-error: true
         with:
             name: gh_pages
