#17623: Internally to upload artifact the artifact name is github-pages

--- a/.github/workflows/docs-latest-public.yaml
+++ b/.github/workflows/docs-latest-public.yaml
@@ -82,4 +82,4 @@ jobs:
         uses: geekyeggo/delete-artifact@v5
         continue-on-error: true
         with:
-            name: gh_pages
+            name: github-pages
