--- a/.github/workflows/cpp-post-commit.yaml
+++ b/.github/workflows/cpp-post-commit.yaml
@@ -98,7 +98,8 @@ jobs:
             pip install --force-reinstall pip==21.2.4
             pip install -r tt_metal/python_env/requirements-dev.txt
             pip install -e .
-            ${{ matrix.test-group.cmd }}
+            mkdir -p generated/test_reports
+            ${{ matrix.test-group.cmd }} --gtest_output=xml:generated/test_reports/test_results.xml
       - uses: ./.github/actions/slack-report
         if: ${{ failure() }}
         with:
